# flask-admin-tabler

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: sidebar_dark.py  theme_settings.py
examples/flask_admin_tabler/: README.md  main.py  pyproject.toml  theme.py
examples/flask_admin_tabler/templates/admin/: base.html
examples/flask_admin_tabler/templates/admin/rediscli/: console.html
flask_admin/: __init__.py  theme.py
flask_admin/static/admin/css/tabler/: admin.css
flask_admin/templates/tabler/admin/: base.html
flask_admin/tests/tabler/: test_renders.py
flask_admin_tabler/: theme.py
flask_admin_tabler/static/admin/js/: bs4_filters.js  tabler_modal.js
flask_admin_tabler/templates/tabler/admin/: base.html  layout.html
flask_admin_tabler/templates/tabler/admin/model/: list.html  row_actions.html
tabler_source/tabler-admin-1.4.0/: map-fullsize.html  maps.html
tests/: test_theme.py
